[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kontract"
version = "0.1.0"
description = "CS2 Trade-Up Scanner — SaaS — finds positive EV trade-up contracts in real time"
requires-python = ">=3.11"
dependencies = [
    "httpx[brotli]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.0",
    "streamlit>=1.28.0",
    "python-telegram-bot>=20.0",
    "redis>=5.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["data", "fetcher", "engine", "alerts", "ui"]
